--- a/public/index.html
+++ b/public/index.html
@@ -4,41 +4,38 @@
     <meta charset="UTF-8">
     <!-- <link rel="stylesheet" href="/style.css"> -->
     <title>FEC Demo</title>
+    <script src="./main.css"></script>
   </head>
   <body>
-    <div style="box-sizing: border-box; margin: 0px; padding: 0px; border: none"><img style="box-sizing: border-box; margin: 0px; padding: 0px; border: none; height: 100%" src="./images/Navbar.png"></img></div>
-    <div style="box-sizing: border-box; margin-top: 0px; padding-top: 0px;" id="Photo-Gallery"></div>
-    <div id="Reservation"></div>
-    <div id="Reviews"></div>
-    <div id="Recommendation"></div>
+    <img style="width:100%; height: 100%; border-style: none" src="./images/Navbar.png"></img>
+    <div style="box-sizing: border-box; margin-top: 0px; padding-top: 0px; border-style: none" id="Photo-Gallery"></div>
+    <div style = "height: 3660px; position: absolute;">
+        <div id="reservation" style = "position:sticky; top:100px;"></div>
+    </div>
+    <div id="app"></div>
+    <div id="recommendations"></div>
     
 
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
     <!-- Refactor for webpack if time-->
-    <script src="http://localhost:3001/bundle.js"></script>
-    <script src="http://localhost:3002/bundle.js"></script>
-    <script src="http://localhost:3003/main.js"></script>
-    <script src="http://localhost:3004/main.js"></script>
-    <!-- see: https://reactjs.org/docs/react-without-jsx.html -->
-    <script>
-      // ReactDOM.render(
-      //   React.createElement(App),
-      //   document.getElementById('Photo-Gallery')
-      // );
-      // ReactDOM.render(
-      //   React.createElement(CountDown),
-      //   document.getElementById('CountDown')
-      // );
-      // ReactDOM.render(
-      //   React.createElement(Related),
-      //   document.getElementById('Related')
-      // );
-      // ReactDOM.render(
-      //   React.createElement(Reviews),
-      //   document.getElementById('Reviews')
-      // );
+    <script src="photo-gallery-proxy.min.js"></script>
+    <script src="http://18.219.238.14:3002/bundle.js"></script>
+    <script src="http://ec2-18-188-168-89.us-east-2.compute.amazonaws.com:3306/main.js"></script>
+    <script src="http://ec2-13-52-191-198.us-west-1.compute.amazonaws.com:3004/main.js"></script>
+    <script> 
+      RecommendationsModule.ReactDOM.render(
+        RecommendationsModule.React.createElement(RecommendationsModule.App),
+        document.getElementById('recommendations')
+      );
     </script>
+    <script> 
+      ReactDOM.render(
+        RecommendationsModule.React.createElement(Reservations.default),
+        document.getElementById('reservation')
+      );
+    </script>
+    <!-- see: https://reactjs.org/docs/react-without-jsx.html -->
   </body>
 </html>
